# flake-templates

haskell/: flake.nix  template.cabal
rust/: flake.nix
