cabal-version:   3.0
name:            template
version:         0.1.0.0
license:         NONE
author:          Nikita
maintainer:      shumeiko.nikita@gmail.com
build-type:      Simple

common warnings
    ghc-options: -Wall

library
    exposed-modules:
    hs-source-dirs: src
    default-language: GHC2021
